--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,10 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
+# builds
+/build/
+dist
+
 # Runtime data
 pids
 *.pid
@@ -59,3 +63,6 @@ typings/
 
 # next.js build output
 .next
+
+
+.DS_Store
